ART 2.5.1
* Added Portuguese translation (thanks to Edson Richter)
* Updated French translation (thanks to Eric Lemesre)
* Fix for query name truncated to 25 characters
* Fix for start query not displaying
* Fix for invalid drill down queries link
* Fix for not being able to define email jobs in Italian and Portuguese locales
* Allow xy chart to have multiple series
* Have show results inline as an application setting
* Enable show/hide of parameters box
* Allow specification of random start time for jobs 

ART 2.5
* Fix for invalid publish job link on linux when reminder email specified
* Support for running DDL/DML statements before query's select statement
* Support for displaying a query in the start page
* Fix for non-ascii values not being saved properly in some admin pages (Thanks to Edson Richter)
* Renamed "Objects" to "Queries" and "Object Groups" to "Query Groups"
* Support for case sensitive operators for dynamic queries
* Allow use of decimals when specifying y axis range
* Support for archiving publish job results
* Removed published files retention period setting
* Allow scheduling of heat maps
* Allow use of default parameter values without specifying parameters in the url
* Allow dashboards to use multi parameters
* Moved some application settings from the web.xml file to the settings page

ART 2.4.1
* Support for bubble charts
* Support for heat map charts (experimental)
* Fix for chart tooltips not displaying when charts displayed inline
* Fix for issue preventing creation/modification of parameters in IE
* Fix for charts not displaying in IE8 when charts displayed inline
* Fix for charts not displaying when y axis range is specified
* Have admin pages use the same header and footer contents as user pages
* Modified syntax for speedometer chart ranges
* Allow use of percentage values in speedometer chart ranges

ART 2.4
* Added cc and bcc fields for email jobs
* Allow change of parameter between inline and multi